--- a/sample_config.env
+++ b/sample_config.env
@@ -3,5 +3,5 @@ TELEGRAM_API = "17822592"
 TELEGRAM_HASH = "a20b3dbbe07ed695563b4609a3e62012"
 DATABASE_URL = "mongodb+srv://Cobra:cobra813@cluster0.0lso95o.mongodb.net/?retryWrites=true&w=majority"
 BOT_TOKEN = "8031320667:AAHI5E8kVYTzYiAWNMw-9-UhaiciBV6nJOY"
-UPSTREAM_REPO = "https://github.com/5hojib/Aeon"
+UPSTREAM_REPO = "https://github.com/1hari11111111/mtp"
 UPSTREAM_BRANCH = "main"
