--- a/sample_config.env
+++ b/sample_config.env
@@ -2,6 +2,6 @@ OWNER_ID = "578811855"
 TELEGRAM_API = "17822592"
 TELEGRAM_HASH = "a20b3dbbe07ed695563b4609a3e62012"
 DATABASE_URL = "mongodb+srv://Cobra:cobra813@cluster0.0lso95o.mongodb.net/?retryWrites=true&w=majority"
-BOT_TOKEN = "8031320667:AAHI5E8kVYTzYiAWNMw-9-UhaiciBV6nJOY"
+BOT_TOKEN = ""
 UPSTREAM_REPO = "https://github.com/1hari11111111/mtp"
 UPSTREAM_BRANCH = "main"
